Fixed Navbar alignment and Hero text1

--- a/src/components/Logo/logo.module.css
+++ b/src/components/Logo/logo.module.css
@@ -1,9 +1,7 @@
 .logo {
-  
+  width: 67px;
+  height: 34px;
+  margin-left: 0 !important; /* Extra margin hatao */
   display: flex;
   align-items: center;
-  top: 20px;
-  left: 32px;
-  width: 67px; /* Figma spec */
-  height: 34px; /* Figma spec */
 }
