--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,9 @@
 .navbar {
-  width: 100%;
-  height: 74px;
-  background-color: var(--color-primary); /* Green color */
   display: flex;
-  align-items: center; /* Vertically center logo, search, button */
+  align-items: center;
   justify-content: space-between;
+  height: 74px;
+  background-color: #34c94b; /* Green */
+  padding: 0 18px !important; /* Cypress range fix */
   box-sizing: border-box;
-  padding: 0 20px; /* Horizontal padding */
 }
